clang/test/BSC/Negative/OwnedStruct/memoryleak/destructor/generic-owned-struct-desturctor-param.cbs
// RUN: %clang_cc1 -verify %s
owned struct A<T> {
    public:
    int * owned a;
    ~A(A<T> this) {
    }// expected-error {{field memory leak of value: `this`, this.a is leak}}
};
int main() {
    int local = 1;
    A<int> a ={.a = (int * owned)&local};
    return 0;
}
